<resources>
    <string name="app_name">My Application</string>
    <string name="dror_movie_app">DROR MOVIE APP</string>
    <string name="kingdom_of_the_planet_of_the_apes">Kingdom of the Planet of the Apes</string>
    <string name="pg_13">PG-13</string>
    <string name="abigail">Abigail</string>
    <string name="rated_r">RATED-R</string>
    <string name="the_garfield_movie">The Garfield Movie</string>
    <string name="pg">PG</string>
    <string name="_57_seconds">57 Seconds</string>
    <string name="rated_r2">RATED-R</string>
    <string name="cottontail">Cottontail</string>
    <string name="pg2">PG</string>
    <string name="tarot">Tarot</string>
    <string name="pg_132">PG-13</string>
    <string name="mother_s_instinct">Mother\'s Instinct</string>
    <string name="no_way_up">No Way Up</string>
    <string name="the_fall_guy">The Fall Guy</string>
    <string name="pg_133">PG-13</string>
    <string name="to_the_hashira_training">To The Hashira Training</string>
    <string name="civil_war">Civil War</string>
    <string name="the_ministry_of_ungentlemanly_warfare">The Ministry of Ungentlemanly Warfare</string>
    <string name="movie">MOVIE :</string>
    <string name="date">DATE :</string>
    <string name="number_of_tickets">NUMBER OF TICKETS :</string>
    <string name="total_price">TOTAL PRICE :</string>
    <string name="confirm">CONFIRM</string>
    <string name="go_back">GO BACK</string>
    <string name="tickets">tickets</string>
    <string name="confirm2">confirm</string>
    <string name="order">order</string>
    <string name="go_back2">go back</string>
    <string name="thank_you_payment_successful">Thank You, Payment Successful !</string>
    <string name="type_your_amount_of_tickets">Type Your Amount Of Tickets.</string>
    <string name="movie_name_1">Kingdom of the Planet of the Apes</string>
    <string name="movie_name_2">Abigail</string>
    <string name="movie_name_3">The Garfield Movie</string>
    <string name="movie_name_4">57 Seconds</string>
    <string name="movie_name_5">Cottontail</string>
    <string name="movie_name_6">Tarot</string>
    <string name="movie_name_7">Mothers Instinct</string>
    <string name="movie_name_8">No Way Up</string>
    <string name="movie_name_9">The Fall Guy</string>
    <string name="movie_name_10">To The Hashira Training</string>
    <string name="movie_name_11">Civil War</string>
    <string name="movie_name_12">The Ministry of Ungentlemanly Warfare</string>
    <string name="movie_details_1">Many years after the reign of Caesar, a young ape goes on a journey that will lead him to question everything hes been taught about the past and make choices that will define a future for apes and humans alike.</string>
    <string name="movie_details_2">"After a group of criminals kidnap the ballerina daughter of a powerful underworld figure, they retreat to an isolated mansion, unaware that they're locked inside with no normal little girl.</string>
    <string name="movie_details_3">After Garfields unexpected reunion with his long-lost father, ragged alley cat Vic, he and his canine friend Odie are forced from their perfectly pampered lives to join Vic on a risky heist.</string>
    <string name="movie_details_4">When a tech blogger lands an interview with a tech guru and stops an attack on him, he finds a mysterious ring that takes him back 57 seconds into the past.</string>
    <string name="movie_details_5">A widower from Japan travels with his estranged son to England in order to fulfill his late wifes dying wish.</string>
    <string name="movie_details_6">When a group of friends recklessly violates the sacred rule of Tarot readings, they unknowingly unleash an unspeakable evil trapped within the cursed cards.</string>
    <string name="movie_details_7">Alice and Celine live a traditional lifestyle with successful husbands and sons of the same age. Lifes perfect harmony is suddenly shattered after a tragic accident.</string>
    <string name="movie_details_8">Characters from different backgrounds are thrown together when the plane theyre travelling on crashes into the Pacific Ocean.</string>
    <string name="movie_details_9">A down-and-out stuntman must find the missing star of his ex-girlfriends blockbuster film.</string>
    <string name="movie_details_10">Tanjiro undergoes rigorous training with the Stone Hashira, Himejima, in his quest to become a Hashira.</string>
    <string name="movie_details_11">A journey across a dystopian future America, following a team of military-embedded journalist as they race against time to reach DC before rebel factions descend upon the White House.</string>
    <string name="movie_details_12">The British military recruits a small group of highly skilled soldiers to strike against German forces behind enemy lines during World War II.</string>
    <string name="movie_name_prefix">Movie Name :</string>
    <string name="date_prefix">Date :</string>
    <string name="price_prefix">Price :</string>
    <string name="theatre">THEATRE</string>
    <string name="select_theatre">Please Select Theare</string>
    <string name="adult_number_of_tickets">ADULT NUMBER OF TICKETS:</string>
    <string name="child_number_of_tickets">CHILD NUMBER OF TICKETS :</string>
    <string name="planet">Planet</string>
    <string name="cinema_city">Cinema City</string>
    <string name="hot_globus">Hot Globus</string>
    <string name="child">CHILD</string>
    <string name="adult">ADULT</string>
</resources>