<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/appback"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardapproved"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/semiTransparent"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/movietxt"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="18dp"
                android:gravity="center"
                android:text="@string/movie" />

            <TextView
                android:id="@+id/theatreinfo"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="18dp"
                android:gravity="center"
                android:text="@string/theatre" />

            <TextView
                android:id="@+id/datetxt"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="18dp"
                android:gravity="center"
                android:text="@string/date" />


            <TextView
                android:id="@+id/childticketnumtxt"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="18dp"
                android:gravity="center"
                android:text="@string/child_number_of_tickets" />

            <TextView
                android:id="@+id/adultticketsnumtxt"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="18dp"
                android:gravity="center"
                android:text="@string/adult_number_of_tickets" />

            <TextView
                android:id="@+id/totaltxt"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="18dp"
                android:gravity="center"
                android:text="@string/total_price" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/checkoutbtn"
                    android:textStyle="bold"
                    android:text="@string/confirm" />

                <Button
                    android:id="@+id/back2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/checkoutbtn"
                    android:textStyle="bold"
                    android:text="@string/go_back" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
