<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/appback"
    >

    <Button
        android:id="@+id/th1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/checkoutbtn"
        android:textStyle="bold"
        android:textSize="20dp"
        android:text="@string/planet" />

    <Button
        android:id="@+id/th2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/checkoutbtn"
        android:textStyle="bold"
        android:textSize="20dp"
        android:text="@string/cinema_city" />

    <Button
        android:id="@+id/th3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/checkoutbtn"
        android:textStyle="bold"
        android:textSize="20dp"
        android:text="@string/hot_globus" />
</LinearLayout>